# MILI

./: README.md  kgen.trace.json.time-events.txt  kgen.trace.json.time-trace  run_python_model.py  test_project.py  test_qwen3_local.py
mili_qwen3/: DELIVERABLES.txt  FINAL_DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  INDEX.md  STRUCTURE.md  pyproject.toml  requirements.txt  server.py  test_real_weights.py  verify_implementation.py  verify_simple.py
mili_qwen3/config/: inference_config.json  model_config.json
mili_qwen3/docs/: 01_PROJECT_OVERVIEW.md  02_MOJO_KERNEL_GUIDE.md  03_PYTHON_INTEGRATION.md  04_ATTENTION_MECHANISMS.md  05_KV_CACHE_MANAGEMENT.md  06_DEPLOYMENT.md  07_ADVANCED_OPTIMIZATION.md  08_TROUBLESHOOTING_AND_DEBUGGING.md  09_API_REFERENCE.md  10_BEST_PRACTICES_AND_PATTERNS.md
mili_qwen3/examples/: basic_inference.py
mili_qwen3/mojo_kernels/: build.sh  test_simple.mojo
mili_qwen3/mojo_kernels/core/: activations.🔥  attention.🔥  normalization.mojo  normalization.🔥  rope.🔥
mili_qwen3/mojo_kernels/memory/: kv_cache.🔥
mili_qwen3/mojo_kernels/utils/: types.🔥
mili_qwen3/python_layer/: __init__.py
mili_qwen3/python_layer/inference/: __init__.py  inference_engine.py
mili_qwen3/python_layer/memory/: __init__.py  kv_cache_manager.py
mili_qwen3/python_layer/model/: qwen_model.py  weight_loader.py
mili_qwen3/python_layer/server/: api.py
mili_qwen3/python_layer/tokenizer/: __init__.py  qwen_tokenizer.py
mili_qwen3/tests/: __init__.py
mili_qwen3/tests/integration/: test_inference.py
mili_qwen3/tests/unit/: test_tokenizer.py
mojo_llm_guide/: llm_mojo_guide.md
